# tutorials

./: .gitignore  INDEX.md  brainstorm.md  env_validator.py  utils.py
00_getting-started/: 00_welcome.ipynb  01_architecture_overview.ipynb  10_pharia-inference_overview.ipynb  11_pharia-search_overview.ipynb  12_pharia-kernel_overview.ipynb  13_pharia-os_overview.ipynb  14_pharia-assistant_overview.ipynb  15_pharia-data-platform_overview.ipynb  16_pharia-studio_overview.ipynb  17_pharia-nls_overview.ipynb  99_where_to_next.ipynb
1. Enable searching documents/: .env.sample  local_utils.py  (+7 more)
E2e - RAG Tutorial/: .env.sample  1. Introduction - Getting Started.ipynb  2. Application Setup - Creating a Boilerplate QA App.ipynb  3. Data Setup - Setting Up the Document Ingestion Pipeline.ipynb  4. Skill Setup - Customizing and Developing Kernel Skills.ipynb  5. Evaluation - v2.ipynb  5a. Evaluation (Simple) - Testing Your RAG Application.ipynb  5b. Evaluation (LLM as a Judge) - Testing Your RAG Application.ipynb  5b. Evaluation (LLM as a Judge)- Testing Your RAG Application.ipynb  6. Application Deployment - Moving to Production.ipynb  E2E Tutorial - 1. Introduction - Getting Started.ipynb  E2E Tutorial - 2. Application Setup - Creating a Boilerplate QA App.ipynb  E2E Tutorial - 3. Data Setup - Setting Up the Document Ingestion Pipeline.ipynb  E2E Tutorial - 4. Skill Setup - Customizing and Developing Kernel Skills.ipynb  E2E Tutorial - 5. Evaluation - Testing Your RAG Application.ipynb  E2E Tutorial - 6. Application Deployment - Moving to Production.ipynb  pyproject.toml
(+100 files in other folders)
